--- a/Assets/styles/ourWork.css
+++ b/Assets/styles/ourWork.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: row;
   gap: 2rem;
+  margin-bottom: 10rem;
 }
 
 .exampleInfo {
@@ -50,7 +51,7 @@
 
 .review {
   font-size: 2rem;
-  color: var(--orange);
+  color: var(--pink);
 }
 
 @media screen and (max-width: 1000px) {
